Typo fix on package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [
     "mssql",
     "json",
-    "JSON2MSSql",
+    "JSON2MSSql"
   ],
   "author": "Fikret Burak Gazioglu <burak@gazi.co> (http://gazi.co)",
   "repository": {
